--- a/index.html
+++ b/index.html
@@ -178,9 +178,9 @@
                 </li>
                 <li>
                     <div class="socials">
-                        <img class="soc-yt-icon" src="/img/yt_icon.png">
-                        <img class="soc-vk-icon" src="/img/vk_icon.png ">
-                        <img class="soc-fb-icon" src="/img/fb_icon.png ">
+                        <img class="soc-yt-icon" src="https://isinshino.github.io/le-corte/img/yt_icon.png">
+                        <img class="soc-vk-icon" src="https://isinshino.github.io/le-corte/img/vk_icon.png">
+                        <img class="soc-fb-icon" src="https://isinshino.github.io/le-corte/img/fb_icon.png ">
                     </div>
                 </li>
                 <li>
