--- a/contacts.html
+++ b/contacts.html
@@ -20,7 +20,7 @@
                 <li><a href="#">Каталог</a></li>
                 <li><a href="#">Доставка</a></li>
                 <li><a href="#">Коллекции</a></li>
-                <li><a href="#">Контакты</a></li>
+                <li><a href="#collections">Контакты</a></li>
             </ul>
             <div class="promo">
                 <h2 class="promo-title">Как с нами связаться</h2>
@@ -76,7 +76,7 @@
                     <a href="#">Поставщики</a>
                 </li>
                 <li>
-                    <a href="#">Коллекции</a>
+                    <a href="#collections">Коллекции</a>
                 </li>
                 <li>
                     <a href="#">Дегустация</a>
