--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <ul class="header-nav clearfix">
                 <li><a href="#">Каталог</a></li>
                 <li><a href="#">Доставка</a></li>
-                <li><a href="#">Коллекции</a></li>
+                <li><a href="#collections">Коллекции</a></li>
                 <li><a href="contacts.html">Контакты</a></li>
             </ul>
             <div class="promo">
@@ -77,7 +77,7 @@
         </div>
     </div>
 
-    <div class="new-collections-section">
+    <div class="new-collections-section" name="#collections">
         <div class="container">
             <img class="line-before" src="img/collection_line.png">
             <div class="collections-left-part">
@@ -123,10 +123,10 @@
                 <p class="degustation-aricle">Приглашаем вас провести вечер в компании<br> профессионального сомелье, который познакомит вас<br> с лучшими винами из нашего ассортимента.</p>
                 <form class="degustation-form" action="lecorte-mail" method="post">
                     <div class="deg-form-left-part">
-                        <input onfocus="this.value=''" type="text" id="fullname" value="Имя">
+                        <input onfocus="this.value=''" type="text" id="fullname" placeholder="Имя">
                     </div>
                     <div class="deg-form-right-part">
-                        <input onfocus="this.value=''" type="text" id="phone" value="Телефон">
+                        <input onfocus="this.value=''" type="text" id="phone" placeholder="Телефон">
                     </div>
                     <div class="deg-form">
                         <select id="adress">
@@ -158,7 +158,7 @@
                     <a href="#">Поставщики</a>
                 </li>
                 <li>
-                    <a href="#">Коллекции</a>
+                    <a href="#collections">Коллекции</a>
                 </li>
                 <li>
                     <a href="#">Дегустация</a>
