footer icons hovers

--- a/contacts.html
+++ b/contacts.html
@@ -4,6 +4,7 @@
 <head>
     <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Playfair+Display:100,200,300,400, 500,600,700&amp;lang=en" />
     <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Montserrat:300,400, 500,600,700&amp;lang=en" />
+    <script src="https://kit.fontawesome.com/457a315592.js" crossorigin="anonymous"></script>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <title>Le-corte</title>
     <link rel="stylesheet" href="style_contacts.css">
@@ -97,9 +98,15 @@
                 </li>
                 <li>
                     <div class="socials">
-                        <img class="soc-yt-icon" src="https://isinshino.github.io/le-corte/img/yt_icon.png">
-                        <img class="soc-vk-icon" src="https://isinshino.github.io/le-corte/img/vk_icon.png">
-                        <img class="soc-fb-icon" src="https://isinshino.github.io/le-corte/img/fb_icon.png ">
+                        <a class="youtube">
+                            <i class="fab fa-2x fa-youtube"></i>
+                        </a>
+                        <a class="vk">
+                            <i class="fab fa-2x fa-vk"></i>
+                        </a>
+                        <a class="facebook">
+                            <i class="fab fa-2x fa-facebook-f"></i>
+                        </a>
                     </div>
                 </li>
                 <li>
