--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <title>Le-corte</title>
     <link rel="stylesheet" href="style.css">
+    <script src="https://kit.fontawesome.com/457a315592.js" crossorigin="anonymous">
+    </script>
 </head>
 
 <body>
@@ -179,9 +181,15 @@
                 </li>
                 <li>
                     <div class="socials">
-                        <img class="soc-yt-icon" src="https://isinshino.github.io/le-corte/img/yt_icon.png">
-                        <img class="soc-vk-icon" src="https://isinshino.github.io/le-corte/img/vk_icon.png">
-                        <img class="soc-fb-icon" src="https://isinshino.github.io/le-corte/img/fb_icon.png ">
+                        <a class="youtube">
+                            <i class="fab fa-2x fa-youtube"></i>
+                        </a>
+                        <a class="vk">
+                            <i class="fab fa-2x fa-vk"></i>
+                        </a>
+                        <a class="facebook">
+                            <i class="fab fa-2x fa-facebook-f"></i>
+                        </a>
                     </div>
                 </li>
                 <li>
