--- a/contacts.html
+++ b/contacts.html
@@ -15,7 +15,7 @@
         <div class="container clearfix">
             <div class="header-top">
                 <p class="header-adress">Новокузнецкий переулок 4/1</p>
-                <p class="header-phone">8&nbsp;(812)&nbsp;123-45-67</p>
+                <a href="tel:+78121234567 " class="header-phone ">8&nbsp;(812)&nbsp;123-45-67</a>
             </div>
             <ul class="header-nav clearfix">
                 <li><a href="#">Каталог</a></li>
@@ -33,79 +33,81 @@
         <div class="container clearfix">
             <div class="number-and-other-left-part">
                 <p class="gray-label">телефон</p>
-                <h2 class="big-number">+7-951-839-44-46</h2>
-                <ul class="write-us-socials">
+                <h2 class="big-number">
+                    <a href="tel:+79518394446">+7-951-839-44-46</a>
+                </h2>
+                <ul class="write-us-socials ">
                     <li>
-                        <a href="#" class="write-us-whatsapp">Напишите нам в <br> Whatsapp</a>
+                        <a href="# " class="write-us-whatsapp ">Напишите нам в <br> Whatsapp</a>
                     </li>
                     <li>
-                        <a href="#" class="write-us-telegram">Напишите нам в <br> Telegram</a>
+                        <a href="# " class="write-us-telegram ">Напишите нам в <br> Telegram</a>
 
                     </li>
                     <li>
-                        <a href="#" class="write-us-facebook">Напишите нам в <br> Facebook</a>
+                        <a href="# " class="write-us-facebook ">Напишите нам в <br> Facebook</a>
                     </li>
                 </ul>
 
             </div>
-            <div class="number-and-other-right-part">
-                <p class="gray-label">e-mail</p>
-                <p class="white-right-part">lecorte@yandex.ru</p>
-                <p class="gray-label">головной офис</p>
-                <p class="white-right-part">г. Монпелье, ул Радужная 14</p>
+            <div class="number-and-other-right-part ">
+                <p class="gray-label ">e-mail</p>
+                <p class="white-right-part ">lecorte@yandex.ru</p>
+                <p class="gray-label ">головной офис</p>
+                <p class="white-right-part ">г. Монпелье, ул Радужная 14</p>
             </div>
         </div>
     </div>
 
-    <div class="map-section">
-        <div class="container">
-            <iframe class="map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d17956.43477121533!2d37.618262770349425!3d55.76624348986579!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46b54b2a81c6ba87%3A0xab6a2e8af55a1c8!2sLa%20Corte!5e0!3m2!1sru!2sru!4v1648578972944!5m2!1sru!2sru"
-                width="1090" height="530" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+    <div class="map-section ">
+        <div class="container ">
+            <iframe class="map " src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d17956.43477121533!2d37.618262770349425!3d55.76624348986579!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46b54b2a81c6ba87%3A0xab6a2e8af55a1c8!2sLa%20Corte!5e0!3m2!1sru!2sru!4v1648578972944!5m2!1sru!2sru "
+                width="1090 " height="530 " style="border:0; " allowfullscreen=" " loading="lazy " referrerpolicy="no-referrer-when-downgrade "></iframe>
         </div>
     </div>
 
-    <div class="footer-section">
-        <div class="container">
-            <ul class="footer-nav">
+    <div class="footer-section ">
+        <div class="container ">
+            <ul class="footer-nav ">
                 <li>
-                    <a href="index.html">Главная</a>
+                    <a href="index.html ">Главная</a>
                 </li>
                 <li>
-                    <a href="#">Каталог</a>
+                    <a href="# ">Каталог</a>
                 </li>
                 <li>
-                    <a href="#">Поставщики</a>
+                    <a href="# ">Поставщики</a>
                 </li>
                 <li>
-                    <a href="#collections">Коллекции</a>
+                    <a href="#collections ">Коллекции</a>
                 </li>
                 <li>
-                    <a href="#">Дегустация</a>
+                    <a href="# ">Дегустация</a>
                 </li>
                 <li>
-                    <a href="#">Коллекция 2022</a>
+                    <a href="# ">Коллекция 2022</a>
                 </li>
                 <li>
-                    <a href="#">Контакты</a>
+                    <a href="# ">Контакты</a>
                 </li>
             </ul>
-            <ul class="footer-social">
+            <ul class="footer-social ">
                 <li>
                     <p>Винный бутик Le Corte</p>
                 </li>
                 <li>
-                    <p>8&nbsp;(812)&nbsp;123-45-67</p>
+                    <a href="tel:+78121234567 " class="footer-phone ">8&nbsp;(812)&nbsp;123-45-67</a>
                 </li>
                 <li>
-                    <div class="socials">
-                        <a class="youtube">
-                            <i class="fab fa-2x fa-youtube"></i>
+                    <div class="socials ">
+                        <a class="youtube ">
+                            <i class="fab fa-2x fa-youtube "></i>
                         </a>
-                        <a class="vk">
-                            <i class="fab fa-2x fa-vk"></i>
+                        <a class="vk ">
+                            <i class="fab fa-2x fa-vk "></i>
                         </a>
-                        <a class="facebook">
-                            <i class="fab fa-2x fa-facebook-f"></i>
+                        <a class="facebook ">
+                            <i class="fab fa-2x fa-facebook-f "></i>
                         </a>
                     </div>
                 </li>
