--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="style.css">
     <script src="https://kit.fontawesome.com/457a315592.js" crossorigin="anonymous">
     </script>
+    <link rel="icon" href="img/favicon.ico">
 </head>
 
 <body>
@@ -20,9 +21,9 @@
                     <a href="tel:+78121234567 " class="header-phone ">8&nbsp;(812)&nbsp;123-45-67</a>
                 </div>
                 <ul class="header-nav clearfix ">
-                    <li><a href="# ">Каталог</a></li>
+                    <li><a href="collection.html">Каталог</a></li>
                     <li><a href="# ">Доставка</a></li>
-                    <li><a href="#collections ">Коллекции</a></li>
+                    <li><a href="collection.html">Коллекции</a></li>
                     <li><a href="contacts.html ">Контакты</a></li>
                 </ul>
                 <div class="promo ">
@@ -108,7 +109,7 @@
                         </tr>
                     </table>
                     <p class="bottle-article-second ">Яркий аромат вина взрывается оттенками спелых ягод,<br> красных яблок и тонкими нотками тропических фруктов.<br> Вино хорошо сочетается с мясными закусками, сырами,<br> буррито и другими простыми блюдами. </p>
-                    <a class="btn " href="# ">Узнать подробнее</a>
+                    <a class="btn " href="collection.html">Узнать подробнее</a>
                 </div>
                 <div class="collections-right-part ">
                     <img src="img/pic_big.png ">
@@ -154,22 +155,22 @@
             <div class="container ">
                 <ul class="footer-nav ">
                     <li>
-                        <a href="# ">Главная</a>
+                        <a href="index.html">Главная</a>
                     </li>
                     <li>
-                        <a href="# ">Каталог</a>
+                        <a href="collection.html">Каталог</a>
                     </li>
                     <li>
                         <a href="# ">Поставщики</a>
                     </li>
                     <li>
-                        <a href="#collections ">Коллекции</a>
+                        <a href="collection.html">Коллекции</a>
                     </li>
                     <li>
                         <a href="# ">Дегустация</a>
                     </li>
                     <li>
-                        <a href="# ">Коллекция 2022</a>
+                        <a href="collection.html">Коллекция 2022</a>
                     </li>
                     <li>
                         <a href="contacts.html ">Контакты</a>
