--- a/contacts.html
+++ b/contacts.html
@@ -6,8 +6,9 @@
     <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Montserrat:300,400, 500,600,700&amp;lang=en" />
     <script src="https://kit.fontawesome.com/457a315592.js" crossorigin="anonymous"></script>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <title>Le-corte</title>
+    <title>Контакты</title>
     <link rel="stylesheet" href="style_contacts.css">
+    <link rel="icon" href="img/favicon.ico">
 </head>
 
 <body>
@@ -18,10 +19,10 @@
                 <a href="tel:+78121234567 " class="header-phone ">8&nbsp;(812)&nbsp;123-45-67</a>
             </div>
             <ul class="header-nav clearfix">
-                <li><a href="#">Каталог</a></li>
+                <li><a href="collection.html">Каталог</a></li>
                 <li><a href="#">Доставка</a></li>
-                <li><a href="#">Коллекции</a></li>
-                <li><a href="#collections">Контакты</a></li>
+                <li><a href="collection.html">Коллекции</a></li>
+                <li><a href="contacts.html">Контакты</a></li>
             </ul>
             <div class="promo">
                 <h2 class="promo-title">Как с нами связаться</h2>
@@ -34,8 +35,7 @@
             <div class="number-and-other-left-part">
                 <p class="gray-label">телефон</p>
                 <h2 class="big-number">
-                    <a href="tel:+79518394446">+7-951-839-44-46</a>
-                </h2>
+                    <a href="tel:+79518394446">+7-951-839-44-46</a></h2>
                 <ul class="write-us-socials ">
                     <li>
                         <a href="# " class="write-us-whatsapp ">Напишите нам в <br> Whatsapp</a>
@@ -73,19 +73,19 @@
                     <a href="index.html ">Главная</a>
                 </li>
                 <li>
-                    <a href="# ">Каталог</a>
+                    <a href="collection.html ">Каталог</a>
                 </li>
                 <li>
                     <a href="# ">Поставщики</a>
                 </li>
                 <li>
-                    <a href="#collections ">Коллекции</a>
+                    <a href="collection.html">Коллекции</a>
                 </li>
                 <li>
                     <a href="# ">Дегустация</a>
                 </li>
                 <li>
-                    <a href="# ">Коллекция 2022</a>
+                    <a href="collection.html">Коллекция 2022</a>
                 </li>
                 <li>
                     <a href="# ">Контакты</a>
