--- a/collection.html
+++ b/collection.html
@@ -33,7 +33,7 @@
     <div class="catalog-section">
         <div class="container">
             <div class="bottle-item">
-                <img src="img/col_first.png">
+                <a href="wine-card.html"><img src="img/col_first.png"></a>
                 <p class="bottle-year">2018</p>
                 <h3 class="bottle-title">Napa Valley <br>Cabernet Sauvignon</h3>
                 <p class="bottle-type">Сухое</p>
@@ -52,7 +52,7 @@
                 <a href="#" class="to-cart-btn">В корзину</a>
             </div>
             <div class="bottle-item">
-                <img src="img/col_second.png">
+                <a href="wine-card.html"><img src="img/col_second.png"></a>
                 <p class="bottle-year">2018</p>
                 <h3 class="bottle-title">Sonoma Coast Syrah<br>Red Car</h3>
                 <p class="bottle-type">Сухое</p>
@@ -71,7 +71,7 @@
                 <a href="#" class="to-cart-btn">В корзину</a>
             </div>
             <div class="bottle-item">
-                <img src="img/col_third.png">
+                <a href="wine-card.html"><img src="img/col_third.png"></a>
                 <p class="bottle-year">2018</p>
                 <h3 class="bottle-title">Oakville Napa <br>Cabernet Franc</h3>
                 <p class="bottle-type">Сухое</p>
@@ -90,7 +90,7 @@
                 <a href="#" class="to-cart-btn">В корзину</a>
             </div>
             <div class="bottle-item">
-                <img src="img/col_forth.png">
+                <a href="wine-card.html"><img src="img/col_forth.png"></a>
                 <p class="bottle-year">2017</p>
                 <h3 class="bottle-title">CA HealdsBurg<br>Ramey Claret</h3>
                 <p class="bottle-type">Сухое</p>
@@ -109,7 +109,7 @@
                 <a href="#" class="to-cart-btn">В корзину</a>
             </div>
             <div class="bottle-item">
-                <img src="img/col_fifth.png">
+                <a href="wine-card.html"><img src="img/col_fifth.png"></a>
                 <p class="bottle-year">2014</p>
                 <h3 class="bottle-title">Sonoma Coast<br>Pinot Noir</h3>
                 <p class="bottle-type">Сухое</p>
@@ -128,7 +128,7 @@
                 <a href="#" class="to-cart-btn">В корзину</a>
             </div>
             <div class="bottle-item">
-                <img src="img/col_sixth.png">
+                <a href="wine-card.html"><img src="img/col_sixth.png"></a>
                 <p class="bottle-year">2019</p>
                 <h3 class="bottle-title">Old Coach Road <br>Sauvignon Blanc</h3>
                 <p class="bottle-type">Сухое</p>
@@ -146,6 +146,7 @@
                 </div>
                 <a href="#" class="to-cart-btn">В корзину</a>
             </div>
+
         </div>
     </div>
 
