collection + main swipers

--- a/wine-card.html
+++ b/wine-card.html
@@ -1,6 +1,7 @@
 <html lang="en">
 
 <head>
+    <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css">
     <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Montserrat:300,400, 500,600,700&amp;lang=en" />
     <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Playfair+Display:300,400, 500,600,700&amp;lang=en" />
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
@@ -50,6 +51,73 @@
                         <p class="color-right">Белое</p>
                         <p class="alc-right">10,2&nbsp;-&nbsp;12,5</p>
                         <p class="value-right">750 мл.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="slider-section">
+        <h2 class="slider-title">Похожие товары</h2>
+        <div class="swiper-container">
+            <div class="swiper-wrapper">
+                <div class="swiper-slide">
+                    <div class="slide-content">
+                        <img src="img/first.png">
+                        <h3>Вино Napa Valley Cabernet <br>Sauvignon
+                        </h3>
+                        <p>3490 р.</p>
+                    </div>
+                </div>
+                <div class="swiper-slide">
+                    <div class="slide-content">
+                        <img src="img/second.png">
+                        <h3>Вино Sonoma Coast Syrah <br>Red Car</h3>
+                        <p>3490 р.</p>
+                    </div>
+                </div>
+                <div class="swiper-slide">
+                    <div class="slide-content">
+                        <img src="img/third.png">
+                        <h3>Вино Oakville Napa Cabernet<br> Franc</h3>
+                        <p>3490 р.</p>
+                    </div>
+                </div>
+                <div class="swiper-slide">
+                    <div class="slide-content">
+                        <img src="img/first.png">
+                        <h3>Вино Napa Valley Cabernet <br> Sauvignon
+                        </h3>
+                        <p>3490 р.</p>
+                    </div>
+                </div>
+                <div class="swiper-slide">
+                    <div class="slide-content">
+                        <img src="img/second.png">
+                        <h3>Вино Sonoma Coast Syrah <br>Red Car</h3>
+                        <p>3490 р.</p>
+                    </div>
+                </div>
+                <div class="swiper-slide">
+                    <div class="slide-content">
+                        <img src="img/third.png">
+                        <h3>Вино Oakville Napa Cabernet<br> Franc</h3>
+                        <p>3490 р.</p>
+                    </div>
+                </div>
+                <div class="swiper-slide">
+                    <div class="slide-content">
+                        <img src="img/first.png">
+                        <h3>Вино Napa Valley Cabernet <br> Sauvignon
+                        </h3>
+                        <p>3490 р.</p>
+                    </div>
+                </div>
+                <div class="swiper-slide">
+                    <div class="slide-content">
+                        <img src="img/second.png">
+                        <h3>Вино Sonoma Coast Syrah <br>Red Car</h3>
+                        <p>3490 р.</p>
                     </div>
                 </div>
             </div>
@@ -107,6 +175,16 @@
             </ul>
         </div>
     </div>
+    <!-- Swiper JS -->
+    <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
+
+    <!-- Initialize Swiper -->
+    <script>
+        var swiper = new Swiper('.swiper-container', {
+            slidesPerView: 3,
+            spaceBetween: 20,
+        });
+    </script>
 </body>
 
 </html>
