--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <script src="https://kit.fontawesome.com/457a315592.js" crossorigin="anonymous">
     </script>
     <link rel="icon" href="img/favicon.ico">
+    <link rel="stylesheet" href="swiper.css" />
 </head>
 
 <body>
@@ -34,9 +35,9 @@
             </div>
         </div>
 
-        <div class="slider-section ">
-            <div class="container clearfix ">
-                <div class="item ">
+        <div class="swiper mySwiper">
+            <div class="swiper-wrapper">
+                <div class="swiper-slide">
                     <div class="slider-section ">
                         <div class="container clearfix ">
                             <div class="slider-left-part ">
@@ -48,15 +49,15 @@
                                     <p>Ramey Claret 2018 года выдержки 12 месяцев во французском и американском дубе. Цвет темно-рубиново-фиолетовый с оттенком прозрачной каймы, на ароматы и вкусы которого влияют черная смородина и малина, а также глубокие
                                         сочетания графита и мясистого характера. Невероятно!</p>
                                     <cite>
-                            Фредерик Коппел
-                                </cite>
+                        Фредерик Коппел
+                            </cite>
                                 </blockquote>
                             </div>
-                            <p class="counter ">1&nbsp;/&nbsp;2</p>
+                            <p class="counter ">1&nbsp;/&nbsp;4</p>
                         </div>
                     </div>
                 </div>
-                <div class="item ">
+                <div class="swiper-slide">
                     <div class="slider-section ">
                         <div class="container clearfix ">
                             <div class="slider-left-part ">
@@ -68,19 +69,63 @@
                                     <p>Этот Гренаш производится в песчаных почвах двух невероятых виноградников, Ла-Жанасс и Ла-Кро. Аромат лепестков роз, дымных чайных листьев и черной вишни, глубоко проникающее вино пульсирует долгим, долгим послевкусием.
                                         Выдержанное в течение 12 месяцев в крупноформатной древесине, чистое фруктовое и атласное во вкусе. Потрясающе молодое вино.</p>
                                     <cite>
-                                Анна Ли С. Иидзима
-                                </cite>
+                            Анна Ли С. Иидзима
+                            </cite>
                                 </blockquote>
 
                             </div>
-                            <p class="counter ">2&nbsp;/&nbsp;2</p>
+                            <p class="counter ">2&nbsp;/&nbsp;4</p>
                         </div>
                     </div>
                 </div>
-                <a class="prev " onclick="minusSlide() "> <img src="img/arrow.png "></a>
-                <a class="next " onclick="plusSlide() "><img src="img/arrow.png "></a>
+                <div class="swiper-slide">
+                    <div class="slider-section ">
+                        <div class="container clearfix ">
+                            <div class="slider-left-part ">
+                                <img src="img/wine_pic.png ">
+                            </div>
+                            <div class="slider-right-part ">
+                                <h2 class="item-title ">Ramey Rochioli Vineyard 2018 Chardonnay, Russian River Valley</h2>
+                                <blockquote class="item-article ">
+                                    <p>Ramey Claret 2018 года выдержки 12 месяцев во французском и американском дубе. Цвет темно-рубиново-фиолетовый с оттенком прозрачной каймы, на ароматы и вкусы которого влияют черная смородина и малина, а также глубокие
+                                        сочетания графита и мясистого характера. Невероятно!</p>
+                                    <cite>
+                        Фредерик Коппел
+                            </cite>
+                                </blockquote>
+                            </div>
+                            <p class="counter ">3&nbsp;/&nbsp;4</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="swiper-slide">
+                    <div class="slider-section ">
+                        <div class="container clearfix ">
+                            <div class="slider-left-part ">
+                                <img src="img/wine_pic_second.png ">
+                            </div>
+                            <div class="slider-right-part ">
+                                <h2 class="item-title ">Domaine de la Janasse 2019 Chaupin Grenache (Châteauneuf-du-Pape)</h2>
+                                <blockquote class="item-article ">
+                                    <p>Этот Гренаш производится в песчаных почвах двух невероятых виноградников, Ла-Жанасс и Ла-Кро. Аромат лепестков роз, дымных чайных листьев и черной вишни, глубоко проникающее вино пульсирует долгим, долгим послевкусием.
+                                        Выдержанное в течение 12 месяцев в крупноформатной древесине, чистое фруктовое и атласное во вкусе. Потрясающе молодое вино.</p>
+                                    <cite>
+                            Анна Ли С. Иидзима
+                            </cite>
+                                </blockquote>
+
+                            </div>
+                            <p class="counter ">4&nbsp;/&nbsp;4</p>
+                        </div>
+                    </div>
+                </div>
             </div>
+            <div class="swiper-button-next"></div>
+            <div class="swiper-button-prev"></div>
         </div>
+
+        <!-- <a class="prev " onclick="minusSlide() "> <img src="img/arrow.png "></a>
+        <a class="next " onclick="plusSlide() "><img src="img/arrow.png "></a> -->
 
         <div class="new-collections-section " name="#collections ">
             <div class="container ">
@@ -216,7 +261,18 @@
         </div>
     </div>
 
+    <!-- Swiper JS -->
+    <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
 
+    <!-- Initialize Swiper -->
+    <script>
+        var swiper = new Swiper(".mySwiper", {
+            navigation: {
+                nextEl: ".swiper-button-next",
+                prevEl: ".swiper-button-prev",
+            },
+        });
+    </script>
     <script src=" script.js "></script>
 </body>
 
