fixed swippers, added folders

--- a/contacts.html
+++ b/contacts.html
@@ -7,7 +7,7 @@
     <script src="https://kit.fontawesome.com/457a315592.js" crossorigin="anonymous"></script>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <title>Контакты</title>
-    <link rel="stylesheet" href="style_contacts.css">
+    <link rel="stylesheet" href="css/style_contacts.css">
     <link rel="icon" href="img/favicon.ico">
 </head>
 
