--- a/collection.html
+++ b/collection.html
@@ -1,15 +1,12 @@
 <html lang="en">
 
 <head>
-
-
-
     <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Playfair+Display:100,200,300,400, 500,600,700&amp;lang=en" />
     <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Montserrat:300,400, 500,600,700&amp;lang=en" />
     <script src="https://kit.fontawesome.com/457a315592.js" crossorigin="anonymous"></script>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <title>Урожай Марселя</title>
-    <link rel="stylesheet" href="style_collection.css">
+    <link rel="stylesheet" href="css/style_collection.css">
     <link rel="icon" href="img/favicon.ico">
 </head>
 
