--- a/wine-card.html
+++ b/wine-card.html
@@ -1,12 +1,13 @@
 <html lang="en">
 
 <head>
-    <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css">
     <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Montserrat:300,400, 500,600,700&amp;lang=en" />
     <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Playfair+Display:300,400, 500,600,700&amp;lang=en" />
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <title>Cabernet Sauvignon</title>
-    <link rel="stylesheet" href="style_card.css">
+    <link rel="stylesheet" href="css/owl.carousel.min.css">
+    <link rel="stylesheet" href="css/owl.theme.default.min.css">
+    <link rel="stylesheet" href="css/style_card.css">
     <script src="https://kit.fontawesome.com/457a315592.js" crossorigin="anonymous">
     </script>
     <link rel="icon" href="img/favicon.ico">
@@ -59,66 +60,50 @@
 
     <div class="slider-section">
         <h2 class="slider-title">Похожие товары</h2>
-        <div class="swiper-container">
-            <div class="swiper-wrapper">
-                <div class="swiper-slide">
-                    <div class="slide-content">
-                        <img src="img/first.png">
+        <div class="contain">
+            <div id="owl-carousel" class="owl-carousel owl-theme">
+                <div class="item">
+                    <a class="item-link" href="wine-card.html">
+                        <img src="img/first.png" style="width: 90px; height: 300px;">
+                        <h3>Вино Napa Valley Cabernet <br>Sauvignon</h3>
+                    </a>
+                    <p>3490 р.</p>
+                </div>
+                <div class="item">
+                    <a class="item-link" href="wine-card.html">
+                        <img src="img/second.png" style="width: 106px; height: 300px;">
+                        <h3>Вино Sonoma Coast Syrah <br>Red Car</h3>
+                    </a>
+                    <p>3490 р.</p>
+                </div>
+                <div class="item">
+                    <a class="item-link" href="wine-card.html">
+                        <img src="img/third.png" style="width: 90px; height: 306px;">
+                        <h3>Вино Oakville Napa Cabernet<br> Franc</h3>
+                    </a>
+                    <p>3490 р.</p>
+                </div>
+                <div class="item">
+                    <a class="item-link" href="wine-card.html">
+                        <img src="img/first.png" style="width: 90px; height: 300px;">
                         <h3>Вино Napa Valley Cabernet <br>Sauvignon
-                        </h3>
-                        <p>3490 р.</p>
-                    </div>
+                    </a>
+                    </h3>
+                    <p>3490 р.</p>
                 </div>
-                <div class="swiper-slide">
-                    <div class="slide-content">
-                        <img src="img/second.png">
+                <div class="item">
+                    <a class="item-link" href="wine-card.html">
+                        <img src="img/second.png" style="width: 106px; height: 300px;">
                         <h3>Вино Sonoma Coast Syrah <br>Red Car</h3>
-                        <p>3490 р.</p>
-                    </div>
+                    </a>
+                    <p>3490 р.</p>
                 </div>
-                <div class="swiper-slide">
-                    <div class="slide-content">
-                        <img src="img/third.png">
+                <div class="item">
+                    <a class="item-link" href="wine-card.html">
+                        <img src="img/third.png" style="width: 90px; height: 300px;">
                         <h3>Вино Oakville Napa Cabernet<br> Franc</h3>
-                        <p>3490 р.</p>
-                    </div>
-                </div>
-                <div class="swiper-slide">
-                    <div class="slide-content">
-                        <img src="img/first.png">
-                        <h3>Вино Napa Valley Cabernet <br> Sauvignon
-                        </h3>
-                        <p>3490 р.</p>
-                    </div>
-                </div>
-                <div class="swiper-slide">
-                    <div class="slide-content">
-                        <img src="img/second.png">
-                        <h3>Вино Sonoma Coast Syrah <br>Red Car</h3>
-                        <p>3490 р.</p>
-                    </div>
-                </div>
-                <div class="swiper-slide">
-                    <div class="slide-content">
-                        <img src="img/third.png">
-                        <h3>Вино Oakville Napa Cabernet<br> Franc</h3>
-                        <p>3490 р.</p>
-                    </div>
-                </div>
-                <div class="swiper-slide">
-                    <div class="slide-content">
-                        <img src="img/first.png">
-                        <h3>Вино Napa Valley Cabernet <br> Sauvignon
-                        </h3>
-                        <p>3490 р.</p>
-                    </div>
-                </div>
-                <div class="swiper-slide">
-                    <div class="slide-content">
-                        <img src="img/second.png">
-                        <h3>Вино Sonoma Coast Syrah <br>Red Car</h3>
-                        <p>3490 р.</p>
-                    </div>
+                    </a>
+                    <p>3490 р.</p>
                 </div>
             </div>
         </div>
@@ -175,16 +160,9 @@
             </ul>
         </div>
     </div>
-    <!-- Swiper JS -->
-    <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
-
-    <!-- Initialize Swiper -->
-    <script>
-        var swiper = new Swiper('.swiper-container', {
-            slidesPerView: 3,
-            spaceBetween: 20,
-        });
-    </script>
+    <script src="js/jquery.js"></script>
+    <script src="js/owl.carousel.min.js"></script>
+    <script src="js/script-carousel.js"></script>
 </body>
 
 </html>
