--- a/index.html
+++ b/index.html
@@ -266,6 +266,7 @@
     <!-- Initialize Swiper -->
     <script>
         var swiper = new Swiper(".mySwiper", {
+            speed: 800,
             pagination: {
                 el: ".swiper-pagination",
                 type: "fraction",
