item counter, clickable buttons, local fixes

--- a/contacts.html
+++ b/contacts.html
@@ -20,8 +20,8 @@
             </div>
             <ul class="header-nav clearfix">
                 <li><a href="collection.html">Каталог</a></li>
-                <li><a href="#">Доставка</a></li>
                 <li><a href="collection.html">Коллекции</a></li>
+                <li><a href="#">Корзина</a></li>
                 <li><a href="contacts.html">Контакты</a></li>
             </ul>
             <div class="promo">
