--- a/index.html
+++ b/index.html
@@ -23,15 +23,15 @@
                 </div>
                 <ul class="header-nav clearfix ">
                     <li><a href="collection.html">Каталог</a></li>
-                    <li><a href="# ">Доставка</a></li>
                     <li><a href="collection.html">Коллекции</a></li>
+                    <li><a href="# ">Корзина</a></li>
                     <li><a href="contacts.html ">Контакты</a></li>
                 </ul>
                 <div class="promo ">
                     <h2 class="promo-title ">Лучший вкус, это вкус долголетнего вина</h2>
                     <p class="promo-article ">Коллекция лучших вин по доступным ценам</p>
                 </div>
-                <a class="btn " href="# ">Винная карта</a>
+                <a class="btn " href="collection.html ">Винная карта</a>
             </div>
         </div>
 
@@ -279,5 +279,7 @@
     </script>
     <script src="js/script.js "></script>
 </body>
+
+</html>
 
 </html>
