--- a/collection.html
+++ b/collection.html
@@ -8,6 +8,7 @@
     <title>Урожай Марселя</title>
     <link rel="stylesheet" href="css/style_collection.css">
     <link rel="icon" href="img/favicon.ico">
+
 </head>
 
 <body>
@@ -18,9 +19,11 @@
                 <a href="tel:+78121234567 " class="header-phone ">8&nbsp;(812)&nbsp;123-45-67</a>
             </div>
             <ul class="header-nav clearfix ">
-                <li><a href="# ">Каталог</a></li>
-                <li><a href="# ">Доставка</a></li>
-                <li><a href="#collections ">Коллекции</a></li>
+                <li><a href="collection.html ">Каталог</a></li>
+                <li><a href="collection.html">Коллекции</a></li>
+                <li class="cart-li"><a href="# ">Корзина</a>
+                    <input type="text" id="basket-items" value="0">
+                </li>
                 <li><a href="contacts.html ">Контакты</a></li>
             </ul>
             <div class="promo">
@@ -35,7 +38,9 @@
             <div class="bottle-item">
                 <a href="wine-card.html"><img src="img/col_first.png"></a>
                 <p class="bottle-year">2018</p>
-                <h3 class="bottle-title">Napa Valley <br>Cabernet Sauvignon</h3>
+                <a class="title-link" href="wine-card.html">
+                    <h3 class="bottle-title">Napa Valley <br>Cabernet Sauvignon</h3>
+                </a>
                 <p class="bottle-type">Сухое</p>
                 <div class="info clearfix">
                     <div class="about-left-part">
@@ -49,12 +54,14 @@
                         <p class="value-right">750 мл.</p>
                     </div>
                 </div>
-                <a href="#" class="to-cart-btn">В корзину</a>
+                <button onclick="incrementValue()" class="to-cart-btn">В корзину</button>
             </div>
             <div class="bottle-item">
                 <a href="wine-card.html"><img src="img/col_second.png"></a>
                 <p class="bottle-year">2018</p>
-                <h3 class="bottle-title">Sonoma Coast Syrah<br>Red Car</h3>
+                <a class="title-link" href="wine-card.html">
+                    <h3 class="bottle-title">Sonoma Coast Syrah<br>Red Car</h3>
+                </a>
                 <p class="bottle-type">Сухое</p>
                 <div class="info clearfix">
                     <div class="about-left-part">
@@ -68,12 +75,14 @@
                         <p class="value-right">750 мл.</p>
                     </div>
                 </div>
-                <a href="#" class="to-cart-btn">В корзину</a>
+                <button onclick="incrementValue()" class="to-cart-btn">В корзину</button>
             </div>
             <div class="bottle-item">
                 <a href="wine-card.html"><img src="img/col_third.png"></a>
                 <p class="bottle-year">2018</p>
-                <h3 class="bottle-title">Oakville Napa <br>Cabernet Franc</h3>
+                <a class="title-link" href="wine-card.html">
+                    <h3 class="bottle-title">Oakville Napa <br>Cabernet Franc</h3>
+                </a>
                 <p class="bottle-type">Сухое</p>
                 <div class="info clearfix">
                     <div class="about-left-part">
@@ -87,12 +96,14 @@
                         <p class="value-right">750 мл.</p>
                     </div>
                 </div>
-                <a href="#" class="to-cart-btn">В корзину</a>
+                <button onclick="incrementValue()" class="to-cart-btn">В корзину</button>
             </div>
             <div class="bottle-item">
                 <a href="wine-card.html"><img src="img/col_forth.png"></a>
                 <p class="bottle-year">2017</p>
-                <h3 class="bottle-title">CA HealdsBurg<br>Ramey Claret</h3>
+                <a class="title-link" href="wine-card.html">
+                    <h3 class="bottle-title">CA HealdsBurg<br>Ramey Claret</h3>
+                </a>
                 <p class="bottle-type">Сухое</p>
                 <div class="info clearfix">
                     <div class="about-left-part">
@@ -106,12 +117,14 @@
                         <p class="value-right">750 мл.</p>
                     </div>
                 </div>
-                <a href="#" class="to-cart-btn">В корзину</a>
+                <button onclick="incrementValue()" class="to-cart-btn">В корзину</button>
             </div>
             <div class="bottle-item">
                 <a href="wine-card.html"><img src="img/col_fifth.png"></a>
                 <p class="bottle-year">2014</p>
-                <h3 class="bottle-title">Sonoma Coast<br>Pinot Noir</h3>
+                <a class="title-link" href="wine-card.html">
+                    <h3 class="bottle-title">Sonoma Coast<br>Pinot Noir</h3>
+                </a>
                 <p class="bottle-type">Сухое</p>
                 <div class="info clearfix">
                     <div class="about-left-part">
@@ -125,12 +138,14 @@
                         <p class="value-right">750 мл.</p>
                     </div>
                 </div>
-                <a href="#" class="to-cart-btn">В корзину</a>
+                <button onclick="incrementValue()" class="to-cart-btn">В корзину</button>
             </div>
             <div class="bottle-item">
                 <a href="wine-card.html"><img src="img/col_sixth.png"></a>
                 <p class="bottle-year">2019</p>
-                <h3 class="bottle-title">Old Coach Road <br>Sauvignon Blanc</h3>
+                <a class="title-link" href="wine-card.html">
+                    <h3 class="bottle-title">Old Coach Road <br>Sauvignon Blanc</h3>
+                </a>
                 <p class="bottle-type">Сухое</p>
                 <div class="info clearfix">
                     <div class="about-left-part">
@@ -144,7 +159,7 @@
                         <p class="value-right">750 мл.</p>
                     </div>
                 </div>
-                <a href="#" class="to-cart-btn">В корзину</a>
+                <button onclick="incrementValue()" class="to-cart-btn">В корзину</button>
             </div>
 
         </div>
@@ -159,19 +174,19 @@
                     <a href="index.html">Главная</a>
                 </li>
                 <li>
-                    <a href="# ">Каталог</a>
+                    <a href="collection.html">Каталог</a>
                 </li>
                 <li>
                     <a href="# ">Поставщики</a>
                 </li>
                 <li>
-                    <a href="#collections ">Коллекции</a>
+                    <a href="collection.html">Коллекции</a>
                 </li>
                 <li>
-                    <a href="# ">Дегустация</a>
+                    <a href="index.html">Дегустация</a>
                 </li>
                 <li>
-                    <a href="# ">Коллекция 2022</a>
+                    <a href="collection.html">Коллекция 2022</a>
                 </li>
                 <li>
                     <a href="contacts.html ">Контакты</a>
@@ -204,7 +219,8 @@
         </div>
     </div>
     </div>
-
+    <script src="js/jquery.js"></script>
+    <script src="js/script.js"></script>
 </body>
 
 </html>
