cart page responsive
managing elements via local storage

--- a/collection.html
+++ b/collection.html
@@ -21,7 +21,7 @@
             <ul class="header-nav clearfix ">
                 <li><a href="collection.html ">Каталог</a></li>
                 <li><a href="collection.html">Коллекции</a></li>
-                <li class="cart-li"><a href="# ">Корзина</a>
+                <li class="cart-li"><a href="cart.html">Корзина</a>
                     <input type="text" id="basket-items" value="0">
                 </li>
                 <li><a href="contacts.html ">Контакты</a></li>
@@ -54,7 +54,7 @@
                         <p class="value-right">750 мл.</p>
                     </div>
                 </div>
-                <button onclick="incrementValue()" class="to-cart-btn">В корзину</button>
+                <button class="to-cart-btn">В корзину</button>
             </div>
             <div class="bottle-item">
                 <a href="wine-card.html"><img src="img/col_second.png"></a>
@@ -75,7 +75,7 @@
                         <p class="value-right">750 мл.</p>
                     </div>
                 </div>
-                <button onclick="incrementValue()" class="to-cart-btn">В корзину</button>
+                <button class="to-cart-btn">В корзину</button>
             </div>
             <div class="bottle-item">
                 <a href="wine-card.html"><img src="img/col_third.png"></a>
@@ -96,7 +96,7 @@
                         <p class="value-right">750 мл.</p>
                     </div>
                 </div>
-                <button onclick="incrementValue()" class="to-cart-btn">В корзину</button>
+                <button class="to-cart-btn">В корзину</button>
             </div>
             <div class="bottle-item">
                 <a href="wine-card.html"><img src="img/col_forth.png"></a>
@@ -117,7 +117,7 @@
                         <p class="value-right">750 мл.</p>
                     </div>
                 </div>
-                <button onclick="incrementValue()" class="to-cart-btn">В корзину</button>
+                <button class="to-cart-btn">В корзину</button>
             </div>
             <div class="bottle-item">
                 <a href="wine-card.html"><img src="img/col_fifth.png"></a>
@@ -138,7 +138,7 @@
                         <p class="value-right">750 мл.</p>
                     </div>
                 </div>
-                <button onclick="incrementValue()" class="to-cart-btn">В корзину</button>
+                <button class="to-cart-btn">В корзину</button>
             </div>
             <div class="bottle-item">
                 <a href="wine-card.html"><img src="img/col_sixth.png"></a>
@@ -159,7 +159,7 @@
                         <p class="value-right">750 мл.</p>
                     </div>
                 </div>
-                <button onclick="incrementValue()" class="to-cart-btn">В корзину</button>
+                <button class="to-cart-btn">В корзину</button>
             </div>
 
         </div>
