--- a/index.html
+++ b/index.html
@@ -24,7 +24,9 @@
                 <ul class="header-nav clearfix ">
                     <li><a href="collection.html">Каталог</a></li>
                     <li><a href="collection.html">Коллекции</a></li>
-                    <li><a href="# ">Корзина</a></li>
+                    <li class="cart-li"><a href="cart.html">Корзина</a>
+                        <input type="text" id="basket-items" value="0">
+                    </li>
                     <li><a href="contacts.html ">Контакты</a></li>
                 </ul>
                 <div class="promo ">
