--- a/wine-card.html
+++ b/wine-card.html
@@ -23,7 +23,7 @@
             <ul class="header-nav clearfix ">
                 <li><a href="collection.html">Каталог</a></li>
                 <li><a href="collection.html ">Коллекции</a></li>
-                <li class="cart-li"><a href="# ">Корзина</a>
+                <li class="cart-li"><a href="cart.html">Корзина</a>
                     <input type="text" id="basket-items" value="0">
                 </li>
                 <li><a href="contacts.html ">Контакты</a></li>
