another version of cart

--- a/cart.html
+++ b/cart.html
@@ -31,22 +31,37 @@
 
     <div class="items-section">
         <div class="container-big clearfix">
-            <h3 class="items-section-title">Моя корзина</h3>
             <div class="cart-left-part">
-                <div class="items-header">
-                    <h4 class="items-header-title name">Наименование</h4>
-                    <h4 class="items-header-title price">Стоимость</h4>
-                    <h4 class="items-header-title amount">Количество</h4>
-                    <h4 class="items-header-title total">Всего</h4>
-                </div>
+                <h4 class="cart-title">Товары в корзине</h4>
+                <p class="cart-article">Проверьте список товаров и оформите заказ</p>
                 <div class="items">
 
                 </div>
             </div>
             <div class="cart-right-part">
-
+                <h3 class="total-title">Мой заказ</h3>
+                <p class="total-article">Итоговая информация</p>
+                <div class="amount-total ">
+                    <p>Количество</p>
+                    <p class="amount-total-number brown ">0 шт.</p>
+                </div>
+                <div class="before-total ">
+                    <p>Cумма:</p>
+                    <p class="before-total-number brown"></p>
+                </div>
+                <div class="sale">
+                    <p>Ваша скидка: </p>
+                    <p class="after-total-number brown">-</p>
+                </div>
+                <div class="total-overall">
+                    <p>Итого: </p>
+                    <p class="after-overall-number brown">0 р.</p>
+                </div>
+                <button class="order-button ">Оформить заказ</button>
+                <button onclick="location.href='collection.html'" class="back-button ">Вернуться к покупкам</button>
             </div>
         </div>
+    </div>
     </div>
 
     <div class="footer-section ">
